[package]
name = "alum"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serialport = "4.3"
indicatif = "0.17"
# works alongside the indicatif package
console = "0.15"
hxdmp = "0.2.1"
anyhow = "1.0.90"
nom = "7.1.3"
